@@ -1,3 +1,7 @@
 include AUTHORS
 include CHANGES
 include LICENSE
+include relatorio/tests/*.jpg
+include relatorio/tests/*.odt
+include relatorio/tests/*.png
+include relatorio/tests/templates/*.tmpl
