@@ -12,7 +12,7 @@ setup(
     url="http://relatorio.openhex.org/",
     author="Nicolas Evrard",
     author_email="nicoe@openhex.org",
-    maintainer=u"Cedric Krier",
+    maintainer="Cedric Krier",
     maintainer_email="cedric.krier@b2ck.com",
     description="A templating library able to output odt and pdf files",
     long_description="""
@@ -28,7 +28,10 @@ and report together, find reports by mimetypes/name/python objects.
     """,
     license="GPL License",
     version=get_version(),
-    packages=find_packages(exclude=['relatorio.tests', 'examples']),
+    packages=find_packages(exclude=['examples']),
+    package_data={
+        'relatorio.tests': ['*.jpg', '*.odt', '*.png', 'templates/*.tmpl'],
+        },
     install_requires=[
         "Genshi >= 0.5",
         "lxml >= 2.0"
@@ -38,7 +41,8 @@ and report together, find reports by mimetypes/name/python objects.
         "Intended Audience :: Developers",
         "License :: OSI Approved :: GNU General Public License (GPL)",
         "Operating System :: OS Independent",
-        "Programming Language :: Python",
+        "Programming Language :: Python :: 2",
+        "Programming Language :: Python :: 3",
         "Topic :: Software Development :: Libraries :: Python Modules",
         "Topic :: Text Processing",
     ],
@@ -46,4 +50,4 @@ and report together, find reports by mimetypes/name/python objects.
     tests_require=[
         "nose",
     ],
-    )
+    use_2to3=True)
