@@ -1,3 +1,4 @@
+ * Add support for Python 3
  * Allow to pass only source to Template
 
 0.5.7 - 20130126
